k8s/applications/dev/debian-debug/base/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-debiandebug
  namespace: debian-debug
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: debian-debug}}
  # ingress: []
  egress:
    - {toEntities: [world, cluster, host]}  # = all
